Tasks for development

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "node lib/test.js"
   },
   "devDependencies": {
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-eslint": "^1.1.0",
+    "grunt-jasmine-node": "^0.2.1",
     "tv4": "1.1.0"
   },
   "dependencies": {
