--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-eslint": "^1.1.0",
-    "grunt-jasmine-node": "^0.2.1",
+    "grunt-contrib-connect": "^0.9.0",
+    "grunt-parts": "^0.2.2",
     "tv4": "1.1.0"
   },
   "dependencies": {
-    "deref": "^0.1.2",
-    "segueta": "~0.0.2"
+    "async-parts": "^0.2.0",
+    "deref": "^0.2.0"
   }
 }
