--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: node_js
+branches:
+  only:
+    - master
 node_js:
   - 0.10
 before_script:
   - 'npm install -g grunt-cli coveralls'
 script:
-  - 'grunt connect test:parts && cat coverage/lcov.info | coveralls'
+  - 'grunt connect test:parts && cat reports/coverage/lcov.info | coveralls'
