--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.2.0",
   "description": "Download or fake JSON schemas from $ref values",
   "main": "lib/index.js",
-  "scripts": {
-    "test": "node lib/test.js"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gextech/refaker"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.9.0",
-    "grunt-parts": "^0.2.2",
-    "tv4": "^1.1.0"
+    "grunt-parts": "^0.3.0",
+    "tv4": "^1.1.4"
   },
   "dependencies": {
     "async-parts": "^0.2.0",
