--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "url": "https://github.com/gextech/refaker"
   },
   "devDependencies": {
+    "clone": "^1.0.2",
+    "glob": "^5.0.10",
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.9.0",
     "grunt-parts": "^0.3.3",
-    "tv4": "^1.1.9"
+    "tv4": "^1.1.12"
   },
   "dependencies": {
-    "async-parts": "^0.2.0",
+    "async-parts": "^0.2.1",
     "deref": "^0.3.0"
   },
   "publishConfig": {
