--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "type": "git",
     "url": "https://github.com/json-schema-faker/refaker"
   },
+  "license": "MIT",
   "devDependencies": {
     "clone": "^1.0.2",
     "glob": "^5.0.10",
