--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.10.1",
     "grunt-parts": "^0.5.6",
+    "is-my-json-valid": "^2.12.2",
     "tv4": "^1.1.12"
   },
   "dependencies": {
