--- a/package.json
+++ b/package.json
@@ -8,18 +8,32 @@
     "url": "https://github.com/json-schema-faker/refaker"
   },
   "license": "MIT",
+  "scripts": {
+    "dev": "jasmine-node spec --coffee --verbose --autoTest --watchFolders lib",
+    "dev:lint": "eslint lib spec",
+    "dev:spec": "jasmine-node spec --coffee --noStackTrace --captureExceptions",
+    "cover": "istanbul cover --root lib --x '**/spec/**' -- jasmine-node --coffee spec",
+    "cover:up": "codecov --file=coverage/lcov.info --disable=gcov -e TRAVIS_NODE_VERSION",
+    "test": "npm run dev:lint && npm run dev:spec --"
+  },
   "devDependencies": {
+    "ajv": "^4.10.0",
     "clone": "^1.0.2",
+    "codecov": "^1.0.1",
+    "eslint": "^3.12.0",
+    "eslint-config-airbnb-base": "^10.0.1",
+    "eslint-plugin-import": "^2.2.0",
     "glob": "^5.0.10",
     "grunt": "^0.4.5",
     "grunt-contrib-connect": "^0.10.1",
-    "grunt-parts": "^0.5.6",
     "is-my-json-valid": "^2.12.2",
+    "istanbul": "^0.4.5",
+    "jasmine-node": "2.0.0-beta4",
     "tv4": "^1.1.12"
   },
   "dependencies": {
-    "async-parts": "^0.2.2",
-    "deref": "^0.6.3"
+    "deref": "^0.7.0",
+    "es6-promise": "^4.0.5"
   },
   "publishConfig": {
     "registry": "http://registry.npmjs.org"
