--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ node_js:
   - 6
   - iojs
 before_script:
+  - 'python -m SimpleHTTPServer 8081 spec/schemas'
   - 'npm run cover'
 script:
   - 'npm run cover:up'
