--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
   - 4
   - 6
 before_script:
-  - 'cd spec/schemas && python -m SimpleHTTPServer 8081 &'
-  - 'cd ../.. yarn cover'
+  - 'python -m SimpleHTTPServer 8081 spec/schemas &'
+  - 'yarn cover'
 script:
   - 'yarn cover:up'
 notifications:
